--- a/src/pybind/mgr/tox.ini
+++ b/src/pybind/mgr/tox.ini
@@ -85,6 +85,7 @@ commands =
     mypy --config-file=../../mypy.ini \
            -m alerts \
            -m balancer \
+           -m call_home_agent \
            -m cephadm \
            -m crash \
            -m dashboard \
@@ -128,6 +129,7 @@ deps =
 modules =
     alerts \
     balancer \
+    call_home_agent \
     cephadm \
     cli_api \
     crash \
@@ -163,6 +165,7 @@ allowlist_externals = bash
 modules =
     alerts \
     balancer \
+    call_home_agent \
     cephadm \
     cli_api \
     crash \
