--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -297,8 +297,9 @@ include_directories(SYSTEM "${CMAKE_SOURCE_DIR}/src/rapidjson/include")
 
 option(WITH_SYSTEM_FMT "use system version of fmt library" ON)
 option(WITH_FMT_HEADER_ONLY "use header-only version of fmt library" OFF)
-if (WITH_SYSTEM_FMT)
-  find_package(fmt 6.0.0 QUIET)
+option(WITH_SYSTEM_FMT "build against system fmt" OFF)
+if(WITH_SYSTEM_FMT)
+  find_package(fmt 8.0.1...<10.0.0 REQUIRED)
 endif()
 if(fmt_FOUND)
   include_directories(SYSTEM "${fmt_INCLUDE_DIR}")
