rgw/multisite-notification: add v2 tests to teuthology
Signed-off-by: Yuval Lifshitz <ylifshit@redhat.com>

--- a/qa/suites/rgw/notifications/tasks/test_others.yaml
+++ b/qa/suites/rgw/notifications/tasks/test_others.yaml
@@ -2,3 +2,8 @@ tasks:
 - notification-tests:
     client.0:
       rgw_server: client.0
+      version: v1
+- notification-tests:
+    client.0:
+      rgw_server: client.0
+      version: v2
