osd: introduce osd_skip_check_past_interval_bounds
See: https://bugzilla.redhat.com/show_bug.cgi?id=2256752
The fix is: https://github.com/ceph/ceph/pull/51510
For clusters that were impacted by this issue, beside applying
the fix, we need to allow for check skipping.

Signed-off-by: Matan Breizman <mbreizma@redhat.com>

Resolves: rhbz#2256752

--- a/src/common/options/global.yaml.in
+++ b/src/common/options/global.yaml.in
@@ -3221,6 +3221,11 @@ options:
   level: dev
   default: false
   with_legacy: true
+- name: osd_skip_check_past_interval_bounds
+  type: bool
+  level: dev
+  default: false
+  with_legacy: true
 - name: osd_debug_pretend_recovery_active
   type: bool
   level: dev
